<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_fridge" 
    tools:context=".FridgeActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="#eff6fc">

    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/linearLayoutVegetables"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/roundcorner01"
            android:padding="2.5dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:weightSum="4"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewVegetables"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/vegetables"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewVegetables"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="bottom|center"
                android:text="@string/text_box01"
                android:textColor="#ffffff"
                android:gravity="bottom"
                android:layout_marginTop="1.5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFruits"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner02"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:padding="2.5dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageViewFruits"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/fruits"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewFruits"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="bottom|center"
                android:text="@string/text_box02"
                android:gravity="bottom"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMeat"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner03"
            android:padding="2.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageViewMeat"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/meat"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewMeat"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/text_box03"
                android:textColor="#ffffff"
                android:gravity="bottom"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>
    </TableRow>

    <Space
        android:id="@+id/firstSpace"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:background="#ccdfee" />

    <TableRow
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/linearLayoutBeverages"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner04"
            android:padding="2.5dp"
            android:weightSum="4"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imageViewBeverages"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/beverages"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewBeverages"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="bottom|center"
                android:text="@string/text_box04"
                android:textColor="#ffffff"
                android:gravity="bottom"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSpicery"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner05"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:padding="2.5dp">

            <ImageView
                android:id="@+id/imageViewSpicery"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/spicery"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewSpicery"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:text="@string/text_box05"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutFrozen"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner06"
            android:padding="2.5dp"
            android:weightSum="4"
            android:layout_marginLeft="5dp">

            <ImageView
                android:id="@+id/imageViewFrozen"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/frozen"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewFrozen"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/text_box06"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>
    </TableRow>

    <Space
        android:id="@+id/secondSpace"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#ccdfee" />

    <TableRow
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/linearLayoutSauces"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner07"
            android:padding="2.5dp"
            android:weightSum="4"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imageViewSauces"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/sauce"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewSauces"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/text_box07"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCereals"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner08"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:padding="2.5dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageViewCereals"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/cereal"
                android:layout_gravity="top|center"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/textViewCereals"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/text_box08"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSnacks"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner09"
            android:padding="2.5dp"
            android:weightSum="4"
            android:layout_marginLeft="5dp">

            <ImageView
                android:id="@+id/imageViewSnacks"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/snacks"
                android:layout_gravity="top|center"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/textViewSnacks"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="Snacks"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>
    </TableRow>

    <Space
        android:id="@+id/thirdSpace"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:background="#ccdfee" />

    <TableRow
        android:id="@+id/fourthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/linearLayoutMilk"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner10"
            android:padding="2.5dp"
            android:layout_marginRight="5dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageViewMilk"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/milk"
                android:layout_weight="3"
                android:layout_gravity="top|center" />

            <TextView
                android:id="@+id/textViewMilk"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/text_box10"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOthers"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner11"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:padding="2.5dp"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageViewOthers"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/others"
                android:layout_gravity="top|center"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/textViewOthers"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/text_box11"
                android:textColor="#ffffff"
                android:layout_marginTop="1.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutEMPTY"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
    </TableRow>
</LinearLayout>
